# WATER

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: .gitkeep
infrastructure/docker/: Dockerfile.bootstrap
infrastructure/orthanc/: orthanc.json
scripts/: verify_orthanc.py
src/water/: __init__.py
src/water/config/: __init__.py  settings.py
src/water/core/: __init__.py  logging.py
src/water/dicom/: __init__.py  bootstrap_data.py  orthanc_client.py  tcia_client.py
tests/: __init__.py
tests/integration/: __init__.py  test_orthanc_live.py
tests/unit/: __init__.py  test_orthanc_client.py  test_settings.py
